# file_server

./: .gitignore  README.md
file_server/: CMakeLists.txt  config.h  fileinfo.h  filemeta.c  filemeta.h  ipc_msg.h  msg.h  msg_queue.c  msg_queue.h  server.c  sock.c  sock.h  wthr.c  wthr.h
file_server/src/: mkcscope.sh
file_server/src/client/: client.c  client_proc.c  client_proc.h  fileio.c  fileio.h
file_server/src/common/: config.h  fileinfo.h  log.c  log.h  msg.c  msg.h  sock.c  sock.h
file_server/src/server/: filemeta.c  filemeta.h  ipc_msg.h  msg_queue.c  msg_queue.h  server.c  wthr.c  wthr.h
